# ai-examples

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  deploy.yml  pylint.yml
basic-agent/: README.md  index.html  main.py  pyproject.toml
basic-agent-2-agent/: Readme.md  client.py  index.html  pyproject.toml
basic-agent-2-agent/weather-agent/: agent_executor.py  main.py
basic-agent-2-agent/weather_agent/: agent_executor.py  main.py
basic-agent-langgraph/: main.py  pyproject.toml
basic-agent-tracing-langsmith/: README.md  main.py  pyproject.toml
basic-agent-with-langsmith/: index.html
basic-cnn/: README.md  evaluate.py  index.html  model.py  pyproject.toml
basic-llm-security-proxy/: index.html  llama_guard_filter.py  proxy_server.py  pyproject.toml
basic-llm-security-proxy/policies/: finance_policy.yaml
basic-multi-agent-system/: main.py  pyproject.toml  state.py  weather_graph.py
basic-multi-agent-system/agents/: action_agent.py  controller_agent.py  planner_agent.py
basic-peft/: data.py  index.html  model.py  pyproject.toml  serve.py
basic-rag/: README.md  index.html  load_data.py  main.py  pyproject.toml
basic-rag/weather_data/: bangalore.txt
basic-rnn/: README.md  evaluate.py  index.html  model.py  pyproject.toml
docs/: basic-agent-with-langsmith.md  basic-agent.md  basic-cnn.md  basic-llm-security-proxy.md  basic-peft.md  basic-rag.md  fastapi-mcp-api-and-client.md  index.md  local-llm.md  multi-agent-system.md  test-mcp-client.md  tiny-gpt-model.md  tiny-moe-based-model.md  tiny-nested-learning.md
fastapi-mcp-api/: Readme.md  main.py  models.py  pyproject.toml
fastapi-mcp-api-and-client/: index.html
fastapi-mcp-api/repositories/: in_memory_weather_repository.py  weather_repository.py
fastapi-mcp-api/routes/: weather.py
local-llm/: Dockerfile  Readme.md  docker-compose.yml  entrypoint.sh  index.html
multi-agent-system/: index.html
overrides/_layout/: default.html
search/: search_index.json
test-mcp-client/: Readme.md  index.html  main.py  pyproject.toml
test-mcp-client/mcp_client/: client.py
tiny-gpt-model/: README.md  index.html  model_char_embedding.py  model_word_embedding.py  pyproject.toml
tiny-moe-based-model/: index.html  model.py  pyproject.toml  serve.py
tiny-moe-based-model/saved_model/: __init__.py
tiny-nested-learning/: Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
tiny-nested-learning/models/: __init__.py  hope.py  transformer.py
