[project]
name = "basic-agent-2-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Sumit Ghosh"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "a2a-sdk (>=0.2.8,<0.3.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
