[project]
name = "basic-llm-security-proxy"
version = "0.1.0"
description = ""
authors = [
    {name = "sumitdotgh"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "transformers (>=4.56.1,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "openai (>=1.107.2,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ollama (>=0.5.3,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
