[project]
name = "basic-peft"
version = "0.1.0"
description = ""
authors = [
    {name = "Sumit Ghosh",email = "sughos@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets (>=4.0.0,<5.0.0)",
    "transformers (>=4.54.1,<5.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
