[project]
name = "basic-rag"
version = "0.1.0"
description = "Basic RAG using Lang Graph"
authors = [
    {name = "Sumit Ghosh"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.4.8,<0.5.0)",
    "chromadb (>=1.0.13,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "azure-ai-inference (>=1.0.0b9,<2.0.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "langchain-openai (>=0.3.24,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
