[project]
name = "tiny-gpt-model"
version = "0.1.0"
description = "A tiny GPT model for experiment"
authors = [
    {name = "Sumit Ghosh"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "tensorflow (==2.15.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
