[project]
name = "tiny-moe-based-model"
version = "0.1.0"
description = ""
authors = [
    {name = "sumitdotgh",email = "sughos@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tensorflow (==2.16.1)",
    "keras (>=3.10.0,<4.0.0)",
    "keras-preprocessing (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
