[tool.poetry]
name = "tiny-nested-learning"
version = "0.1.0"
description = "A toy comparison between a tiny Transformer and a tiny HOPE-style model"
authors = ["Sumit Ghosh"]
license = "MIT"
readme = "README.md"

# Poetry needs this to know which Python to use
[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "==2.15.0"
numpy = ">=1.24,<2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
